# check-python-init-files

./: .pre-commit-hooks.yaml  setup.cfg
check_python_init_files/: main.py
