[metadata]
name = check-python-init-files
description = check if __init__.py files exist in each folder containing a .py file
version = 0.1.0
author = Julien Perichon
author_email = julien.perichon@sicara.com

[options]
packages = find:

[options.entry_points]
console_scripts =
    check-python-init-files = check_python_init_files.main:main
